# Patterns

./: .gitignore  CMakeLists.txt  README.md
AbstractFactory/: AbstractFactory.md  CMakeLists.txt  Chair.h  FurnitureFactory.h  ModernChair.h  ModernFurnitureFactory.h  ModernSofa.h  Sofa.h  VictorianChair.h  VictorianFurnitureFactory.h  VictorianSofa.h  main.cpp
Adapter/: CMakeLists.txt  README.md  RoundHole.h  RoundPeg.h  SquarePeg.h  SquarePegAdapter.h  better_example.h  main.cpp
Bridge/: AdvancedRemote.h  CMakeLists.txt  Device.h  README.md  Radio.h  Remote.h  TV.h  main.cpp
Builder/: Builder.h  Builder.md  CMakeLists.txt  Car.h  CarBuilder.h  Director.h  Motorcycle.h  MotorcycleBuilder.h  main.cpp
Composite/: CMakeLists.txt  Circle.h  CompoundGraphic.h  Dot.h  Graphic.h  ImageEditor.h  README.md  main.cpp
FactoryMethod/: CMakeLists.txt  Logistics.h  README.md  RoadLogistics.h  SeaLogistic.h  Ship.h  Transport.h  Truck.h  main.cpp
Observer/: CMakeLists.txt  Client.h  ConcreteSubscriber.h  Publisher.h  README.md  Subscriber.h  main.cpp
Prototype/: Application.h  CMakeLists.txt  Circle.h  README.md  Rectangle.h  Shape.h  main.cpp
Singleton/: CMakeLists.txt  Database.h  README.md  main.cpp
Strategy/: CMakeLists.txt  Navigator.h  PublicTransportStrategy.h  README.md  RoadStrategy.h  RouteStrategy.h  Templated.h  WalkingStrategy.h  main.cpp  stl_strategy.h
TemplateStrategy/: Creator.hpp  WidgetManager.hpp
TemplateStrategy/Strategies_based_on_templates/: CMakeLists.txt  Creator.hpp  WidgetManager.hpp  main.cpp
